tests/NormalTests/paczka2/big_fuzzy/76472053.err
Error in line 2: eBIVmwE A425 60,6
Error in line 14: 8DLsPS S430 12,2
Error in line 20: A425 S142 209,5
Error in line 22: A425 S313 95,0
Error in line 27: XQLHyMVUtup S313 -11,9
Error in line 24: A425 S142 79,7
Error in line 21: 8DLsPS S142 8,7
Error in line 28: A425 S313 47,2
Error in line 7: XQLHyMVUtup S313 5,9
Error in line 31: 8DLsPS S430 17,8
Error in line 6: WJMkQ6hpxS S313 57,2
Error in line 48: WJMkQ6hpxS A425 54,6
Error in line 57: A425 S430 78,62
Error in line 65: WJMkQ6hpxS A425 97,2
Error in line 69: WJMkQ6hpxS S430 9,7
Error in line 76: WJMkQ6hpxS A42U 99,3
Error in line 44: A425 A425 4,3
Error in line 72: HqSx4ivF9ll S142 23,6
Error in line 73: WJMkQ6hpxS A425 61,4
Error in line 86: eBIVmwE A425 20,1
Error in line 95: HqSx4ivF9ll S313 31,07
Error in line 99: WJMkQ6hpxS A425 84,7
Error in line 103: A425 S430 187,4
Error in line 113: eBIVmwE S430 67,3
Error in line 119: eBIVmwE S313 13,7
Error in line 106: XQLHyMVUtup A425 10,9
Error in line 128: WJMkQ6hpxS A425 24,5
Error in line 161: A425 A425 22,5
Error in line 167: XQLHyMVUtup A425 97,8
Error in line 162: A425 S313 7,2
Error in line 173: eBIVmwE A425 322,88
Error in line 183: 8DLsPS S430 46,9
Error in line 185: 8DLsPS S313 37,6
Error in line 182: XQLHyMVUtup S313 31,3
Error in line 180: pakvZwgK S430 64,2
Error in line 191: pakvZwgK A425 85,5
Error in line 198: XQLHyMVUtup S142 5,6
Error in line 209: pakvZwgK S142 53,1
Error in line 215: XQLHyMVUtup S142 13,2
Error in line 223: WJMkQ6hpxS S313 9,2
Error in line 220: XQLHyMVUtup A425 33,6
Error in line 232: HqSx4ivF9ll S313 99,7
